# python-starter

./: .pylintrc  .python_starter_pylintrc  LICENSE  README.md  apply_configuration.py  config.json  pyproject.toml  run_ci_checks.sh
.github/workflows/: ci.yml
python_starter/: structs.py  utils.py
src/python_starter/: utils.py
tests/: test_utils.py
